--- a/form/css/style.css
+++ b/form/css/style.css
@@ -1,86 +1,59 @@
 
-* {
-    margin:0;
-    padding:0;
-}
-
-
 body{
-    font-family: "New Peninim MT", serif;
-    background-color: white;
-    z-index: 0;
+    border: 1px solid white;
+    background-color:  #1f1f1f;
+    height: 10000px;
+
 }
 
-/** Instructions component */
-.instructions {
-    border: 1px solid black;
-    width: 400px;
+.loginBox{
+
+    background: lightgray;
+    width: 300px;
+    height: 300px;
+    border-radius: 10%;
 }
 
-.instructions h3{
-    padding: 1em;
+
+
+.loginBox h1{
+    padding-top: 0.5rem;
+
+    text-align: center;
+    z-index: 2;
 }
 
+/*centera*/
+.box{
+    margin: 0 auto;
+}
 
-
-/** Login component **/
 .container{
-    width: fit-content;
-    border: 1px solid black;
+    position: sticky;
+    left: 0;
+    top: 30%;
+    margin-bottom: 150px;
+    width: 100%;
+    z-index: 2;
 }
 
-.login-box{
-
-    padding:    1em;
-    border:     1px solid black;
-    margin:     1em;
-    width:      fit-content;
-    z-index:    1;
-
-}
-
-.form{
-    border: 1px solid black;
-}
-
-div .form-box{
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    width: fit-content;
-}
-
-
-.flex-item{
-    width: fit-content;
-    margin: 0.05em 0 0.05em 0;
+.login-form{
+    font-weight: bolder;
+    padding-left: 1em;
 
 }
 
-.login-btn{
-    border: black solid 1px;
+.btn-container{
+
+}
+
+.box button{
     position: relative;
-    padding: .2rem;
-    width: fit-content;
-}
-
-.article{
-    width: 700px;
-    border: 1px solid black;
-    margin: 2rem;
-    padding: 2rem;
+    margin-top: 3em;
+    width: 30%;
+    background-color: lightgray;
 
 }
 
-.article-header{
-    position: relative;
-    font-family: "Seravek", cursive;
-}
 
-
-section .article-image {
-    width: inherit;
-    margin: 4rem;
-    border: 1px solid black;
-}
 
